tests/macro_tests/tests/fail/multer_rename_invalid_symbol.rs
use multer_derive::FromMultipart;

#[derive(FromMultipart)]
struct MyStruct {
    #[multer(rename = "1")]
    text: String,

    #[multer(rename = "$number")]
    number: u32,
}

fn main() {}
