tests/macro_tests/tests/fail/multer_rename_invalid_symbol.stderr
error: proc-macro derive panicked
 --> tests/fail/multer_rename_invalid_symbol.rs:3:10
  |
3 | #[derive(FromMultipart)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: `"1"` is not a valid identifier
